# HGSD

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  routes.txt
data/tests/: test1.vrp
include/: DVRPD.h  Drone.h  Location.h  Routes.h  Tests.h  Vehicle.h
notebooks/: plotRoutes.ipynb  routes.sol
src/: DVRPD.cpp  Drone.cpp  GeneticAlgorithm.cpp  Location.cpp  Routes.cpp  Tests.cpp  Vehicle.cpp
